Fixes to many non-appearing images and fix to scroll lock on smaller screens

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -117,6 +117,11 @@
   filter: blur(150px);
   }
 }
+.img-card {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 /* width */
 ::-webkit-scrollbar {
   width: 8px;
